objects/nSBA__SBA_Account_Detail__c.object
<CustomObject>
    <description>This object holds extended SBA Account data for summarizing fields or other form fields.</description>
    <fields>
        <fullName>nSBA__Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Detail</relationshipLabel>
        <relationshipName>Account_Detail</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>nSBA__Client_Company_City__c</fullName>
        <description>Users populate this optional text field with the client company city. By default, it is empty.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Optional text field with the client company city.</inlineHelpText>
        <label>Client Company City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nSBA__Client_Company_Name__c</fullName>
        <description>Users populate this optional text field with the client company name. By default, it is empty.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Optional text field with the client company name.</inlineHelpText>
        <label>Client Company Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nSBA__Client_Company_Phone_Number__c</fullName>
        <description>Users populate this optional text field with the client company phone number. By default, it is empty.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Optional text field with the client company phone number.</inlineHelpText>
        <label>Client Company Phone Number</label>
        <length>17</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nSBA__Client_Company_State__c</fullName>
        <description>Users populate this optional picklist field with the client company state abbreviation. By default, it is empty.</description>
        <inlineHelpText>Optional picklist field with the client company state abbreviation.</inlineHelpText>
        <label>Client Company State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AS</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>FM</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>GU</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MH</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>nSBA__Client_Company_Street__c</fullName>
        <description>Users populate this optional text field with the client company street. By default, it is empty.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Optional text field with the client company street.</inlineHelpText>
        <label>Client Company Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nSBA__Client_Company_Zip_Code__c</fullName>
        <description>Users populate this optional text field with the client company zip code. By default, it is empty.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Optional text field with the client company zip code.</inlineHelpText>
        <label>Client Company Zip Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nSBA__F4506_Auth_Rep_Sign__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Users select this optional checkbox if an authorized representative signed the form. By default, it is false.</description>
        <inlineHelpText>Optional checkbox for form signed by an authorized representative.</inlineHelpText>
        <label>F4506 Auth Rep Signature</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nSBA__F4506_Electronic_Sign__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Users select this optional checkbox if the form was electronically signed. By default, it is false.</description>
        <inlineHelpText>Optional checkbox for signatory to confirm document was electronically signed.</inlineHelpText>
        <label>F4506 Electronic Signature</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nSBA__F4506_Spouse_Auth_Rep_Sign__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Users select this optional checkbox if an authorized representative signed a form for the spouse. By default, it is false.</description>
        <inlineHelpText>Optional checkbox for form signed by an authorized representative for the spouse.</inlineHelpText>
        <label>F4506 Spouse Auth Rep Signature</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nSBA__F4506_Spouse_Electronic_Sign__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Users select this optional checkbox if the spouse electronically signed a form. By default, it is false.</description>
        <inlineHelpText>Optional checkbox for signatory to confirm document was electronically signed.</inlineHelpText>
        <label>F4506 Spouse Electronic Signature</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nSBA__IVES_Participant_City__c</fullName>
        <description>Users populate this optional text field with the IVES participant city. By default, it is empty.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Optional text field for the IVES participant city.</inlineHelpText>
        <label>IVES Participant City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nSBA__IVES_Participant_ID_Number__c</fullName>
        <description>Users populate this optional text field with either the IVES participant&apos;s social security number (SSN), individual taxpayer number (ITN), or the employer identification number (EIN). By default, it is empty.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Optional text field for either the IVES participant&apos;s social security number (SSN), individual taxpayer number (ITN), or the employer identification number (EIN).</inlineHelpText>
        <label>IVES Participant ID Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nSBA__IVES_Participant_Name__c</fullName>
        <description>Users populate this optional text field with the IVES participant name. By default, it is empty.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Optional text field for IVES participant name.</inlineHelpText>
        <label>IVES Participant Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nSBA__IVES_Participant_SOR_Mailbox_ID__c</fullName>
        <description>Users populate this optional text field with the IVES Secure Object Repository (SOR) mailbox ID. By default, it is empty.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Optional text field for the IVES SOR mailbox ID.</inlineHelpText>
        <label>IVES Participant SOR Mailbox ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nSBA__IVES_Participant_State__c</fullName>
        <description>Users populate this optional picklist field with the IVES participant state abbreviation. By default, it is empty.</description>
        <inlineHelpText>Optional picklist field with the IVES participant state abbreviation.</inlineHelpText>
        <label>IVES Participant State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AS</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>FM</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>GU</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MH</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>nSBA__IVES_Participant_Street__c</fullName>
        <description>Users populate this optional text field with the IVES participant street. By default, it is empty.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Optional text field for the IVES participant street.</inlineHelpText>
        <label>IVES Participant Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nSBA__IVES_Participant_Unique_ID__c</fullName>
        <description>Users populate this optional text field with the IVES participant unique 10-character numeric ID for mailbox file information. By default, it is empty.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Optional text field to create 10 character ID that will show up in the mailbox file information. The unique ID cannot contain a SSN, ITIN or EIN.</inlineHelpText>
        <label>IVES Participant Unique ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nSBA__IVES_Participant_Zip_Code__c</fullName>
        <description>Users populate this optional text field with the IVES participant zip code. By default, it is empty.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Optional text field with the IVES participant zip code.</inlineHelpText>
        <label>IVES Participant Zip Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nSBA__Is_Primary_Account_WI_Transcript__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Users select this optional checkbox if they provide a wage and income transcript for the primary account. By default, it is false.</description>
        <inlineHelpText>Optional checkbox if the transcript provided is a wage and income transcript.</inlineHelpText>
        <label>Primary Account WI Transcript Checkbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nSBA__Is_Spouse_Account_WI_Transcript__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Users select this optional checkbox if they provide a wage and income transcript for the spouse account. By default, it is false.</description>
        <inlineHelpText>Optional checkbox if the provided spouse account transcript is a wage and income transcript.</inlineHelpText>
        <label>Spouse Account WI Transcript Checkbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nSBA__UEID__c</fullName>
        <description>A user populates this optional text field with the Unique Entity ID from sam.gov. By default, it is empty.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Optional text field with the Unique Entity ID from sam.gov.</inlineHelpText>
        <label>Unique Entity ID</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nSBA__Wage_And_Income_Tax_Form_Number_1__c</fullName>
        <description>Users populate this optional text field with the first wage and income tax form number. By default, it is empty.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Optional text field for a wage and income tax form number. If no entries are made in all wage and income tax form fields, the system sends all forms (W-2, 1098-E, 1099-G, etc.) associated with the account.</inlineHelpText>
        <label>Wage and Income Tax Form Number 1</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nSBA__Wage_And_Income_Tax_Form_Number_2__c</fullName>
        <description>Users populate this optional text field with the second wage and income tax form number. By default, it is empty.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Optional text field for a wage and income tax form number. If no entries are made in all wage and income tax form fields, the system sends all forms (W-2, 1098-E, 1099-G, etc.) associated with the account.</inlineHelpText>
        <label>Wage and Income Tax Form Number 2</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nSBA__Wage_And_Income_Tax_Form_Number_3__c</fullName>
        <description>Users populate this optional text field with the third wage and income tax form number. By default, it is empty.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Optional text field for a wage and income tax form number. If no entries are made in all wage and income tax form fields, the system sends all forms (W-2, 1098-E, 1099-G, etc.) associated with the account.</inlineHelpText>
        <label>Wage and Income Tax Form Number 3</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>SBA Account Detail</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>SBA Account Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SBA Account Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>